--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project-lodestone-website",
   "private": true,
-  "version": "1.0.6",
+  "version": "1.0.5",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -24,7 +24,7 @@
     "vite": "^6.2.2"
   },
   "dependencies": {
-    "@team-lodestone/lodestone-ui": "1.2.0",
+    "@team-lodestone/lodestone-ui": "^1.3.2",
     "svelte-i18n": "^4.0.1"
   }
 }
